# docs/api/openapi-v1.yaml
@@ -7,6 +7,31 @@ info:
 servers:
 - url: /api/v1
 paths:
+  /api/v1/auth/refresh:
+    post:
+      tags:
+      - auth
+      summary: Refresh
+      description: Rotates refresh token and returns new accessToken + new HttpOnly
+        refresh cookie
+      operationId: refresh
+      parameters:
+      - name: refreshToken
+        in: cookie
+        required: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                additionalProperties:
+                  type: object
+                  additionalProperties:
+                    type: string
   /api/v1/auth/login:
     post:
       tags:
